--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1980,7 +1980,7 @@
                 </div>
             </div>
 
-            <section class="donate-section" id="donate">
+            <section class="donate-section" id="donation-section">
                 <h2>Support easyjpgtopdf</h2>
                 <p>Your contribution keeps our PDF tools fast, secure, and free for everyone.</p>
                 <div class="donate-container">
