fix: Add config.js for proper API base URL handling across all environments

--- a/index.html
+++ b/index.html
@@ -4812,6 +4812,7 @@
         }
     </script>
 
+    <script type="module" src="js/config.js"></script>
     <script type="module" src="js/firebase-init.js"></script>
     <script type="module" src="js/auth.js"></script>
     <script type="module" src="js/donate.js"></script>
