--- a/dashboard.html
+++ b/dashboard.html
@@ -930,6 +930,7 @@
     </main>
 
     <script src="https://checkout.razorpay.com/v1/checkout.js" defer></script>
+    <script type="module" src="js/config.js"></script>
     <script type="module" src="js/firebase-init.js"></script>
     <script type="module" src="js/auth.js"></script>
     <script type="module">
