--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4774,6 +4774,7 @@
         }
     </script>
 
+    <script type="module" src="js/config.js"></script>
     <script type="module" src="js/firebase-init.js"></script>
     <script type="module" src="js/auth.js"></script>
     <script type="module" src="js/donate.js"></script>
