fix: Copy all static assets to server/public, add debug logging to donate.js

--- a/index.html
+++ b/index.html
@@ -1718,6 +1718,7 @@
                             <a href="unlock-pdf.html">Unlock PDF</a>
                             <a href="watermark-pdf.html">Watermark PDF</a>
                             <a href="crop-pdf.html">Crop PDF</a>
+                            <a href="add-page-numbers.html">Add Page Numbers</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -1744,6 +1745,7 @@
                         <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
+                            <a href="protect-excel.html">Protect Excel Sheet</a>
                         </div>
                     </div>
                 </div>
@@ -1797,13 +1799,6 @@
                     <h3>Word to PDF</h3>
                     <p>Convert Word documents to PDF format.</p>
                 </div>
-                <div class="tool-card" onclick="location.href='excel-to-pdf.html'">
-                    <div class="tool-icon">
-                        <i class="fas fa-file-excel"></i>
-                    </div>
-                    <h3>Excel to PDF</h3>
-                    <p>Convert Excel spreadsheets to PDF files.</p>
-                </div>
                 <div class="tool-card" onclick="location.href='ppt-to-pdf.html'">
                     <div class="tool-icon">
                         <i class="fas fa-file-powerpoint"></i>
@@ -1827,6 +1822,22 @@
                     <h3>PDF to Word</h3>
                     <p>Convert PDF files to editable Word documents.</p>
                 </div>
+                <div class="tool-card" onclick="location.href='pdf-to-ppt.html'">
+                    <div class="tool-icon">
+                        <i class="fas fa-file-powerpoint"></i>
+                    </div>
+                    <h3>PDF to PowerPoint</h3>
+                    <p>Convert PDF to editable PowerPoint slides.</p>
+                </div>
+
+                <!-- Excel Tools -->
+                <div class="tool-card" onclick="location.href='excel-to-pdf.html'">
+                    <div class="tool-icon">
+                        <i class="fas fa-file-excel"></i>
+                    </div>
+                    <h3>Excel to PDF</h3>
+                    <p>Convert Excel spreadsheets to PDF files.</p>
+                </div>
                 <div class="tool-card" onclick="location.href='pdf-to-excel.html'">
                     <div class="tool-icon">
                         <i class="fas fa-file-excel"></i>
@@ -1834,12 +1845,19 @@
                     <h3>PDF to Excel</h3>
                     <p>Extract tables from PDF to Excel format.</p>
                 </div>
-                <div class="tool-card" onclick="location.href='pdf-to-ppt.html'">
+                <div class="tool-card" onclick="location.href='protect-excel.html'">
                     <div class="tool-icon">
-                        <i class="fas fa-file-powerpoint"></i>
+                        <i class="fas fa-lock"></i>
                     </div>
-                    <h3>PDF to PowerPoint</h3>
-                    <p>Convert PDF to editable PowerPoint slides.</p>
+                    <h3>Protect Excel</h3>
+                    <p>Add password protection to Excel files.</p>
+                </div>
+                <div class="tool-card" onclick="window.open('excel-unlocker/', '_blank')">
+                    <div class="tool-icon">
+                        <i class="fas fa-unlock-alt"></i>
+                    </div>
+                    <h3>Unlock Excel</h3>
+                    <p>Remove password from protected Excel files.</p>
                 </div>
 
                 <!-- Pdf Editor Tools -->
@@ -1887,6 +1905,13 @@
                     <h3>Unlock PDF</h3>
                     <p>Remove password protection from PDF files.</p>
                 </div>
+                <a href="add-page-numbers.html" class="tool-card">
+                    <div class="tool-icon">
+                        <i class="fas fa-sort-numeric-up"></i>
+                    </div>
+                    <h3>Add Page Numbers</h3>
+                    <p>Add customizable page numbers to your PDF documents.</p>
+                </a>
                 <div class="tool-card" onclick="location.href='watermark-pdf.html'">
                     <div class="tool-icon">
                         <i class="fas fa-tint"></i>
@@ -1984,13 +2009,6 @@
                     </div>
                     <h3>Marriage Card</h3>
                     <p>Design beautiful marriage invitation cards.</p>
-                </div>
-                <div class="tool-card" onclick="window.open('excel-unlocker/', '_blank')">
-                    <div class="tool-icon">
-                        <i class="fas fa-unlock-alt"></i>
-                    </div>
-                    <h3>Excel Unlocker</h3>
-                    <p>Remove password protection from Excel files.</p>
                 </div>
             </div>
 
