fix: user dropdown menu now closes on mouse leave

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -213,6 +213,11 @@
             z-index: 1000;
         }
 
+        /* Hide dropdown when hidden attribute is present */
+        .user-dropdown[hidden] {
+            display: none !important;
+        }
+
         .user-dropdown a,
         .user-dropdown button {
             display: flex;
