feat: enable real-time Firebase comments with live sync globally

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4291,12 +4291,12 @@
 
     <script>
         window.FIREBASE_CONFIG = window.FIREBASE_CONFIG || {
-            apiKey: "YOUR_FIREBASE_API_KEY",
-            authDomain: "YOUR_FIREBASE_PROJECT.firebaseapp.com",
-            projectId: "YOUR_FIREBASE_PROJECT_ID",
-            storageBucket: "YOUR_FIREBASE_PROJECT.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_FIREBASE_APP_ID"
+            apiKey: "AIzaSyBch3tJoeFqio3IA4MbPoh2GHZE2qKVzGc",
+            authDomain: "easyjpgtopdf-de346.firebaseapp.com",
+            projectId: "easyjpgtopdf-de346",
+            storageBucket: "easyjpgtopdf-de346.appspot.com",
+            messagingSenderId: "564572183797",
+            appId: "1:564572183797:web:9c204df018c150f02f79bc"
         };
     </script>
 
