Add footer.css to all pages for consistent centered footer styling

--- a/add-page-numbers.html
+++ b/add-page-numbers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Page Numbers to PDF - easyjpgtopdf</title>
+    <link rel="stylesheet" href="css/footer.css">
     <meta name="description" content="Add page numbers to your PDF documents easily. Customize position, format, and style of page numbers for professional-looking documents.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
