--- a/image-watermark-convert.html
+++ b/image-watermark-convert.html
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Image Watermark Convert</title>
+    <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     *{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif}
@@ -255,7 +256,8 @@
 
       meta.textContent = `${fileName}${dims? ' â€¢ '+dims : ''}`;
       // Show image data URL in iframe by wrapping with simple HTML
-      const html = `<html><head><meta charset='utf-8'><title>Preview</title>    
+      const html = `<html><head><meta charset='utf-8'><title>Preview</title>
+    <link rel="stylesheet" href="css/footer.css">    
 
     
     
