--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refund & Cancellation Policy | easyjpgtopdf</title>
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdHRb+Idu8LJIYurx8WcN6iYG3PaY5E9O+V1YxDCEV4VpWw2gw2gYdExg1DMKyYI2z9g6jcJaw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         :root {
