--- a/Indian-style-Resume-generator.html
+++ b/Indian-style-Resume-generator.html
@@ -1,9 +1,10 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="hi">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Indian Resume Maker â€” Final (Dark/Light + 10 Templates)</title>
+    <link rel="stylesheet" href="css/footer.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
@@ -929,7 +930,8 @@ document.getElementById('downloadDoc').addEventListener('click', ()=> {
   .tpl-6 .section-title { color: #fd7e14; }
 </style>`;
 
-  const docHTML = `<!doctype html><html><head><meta charset="utf-8"><title>${nameField}</title>${docStyles}    
+  const docHTML = `<!doctype html><html><head><meta charset="utf-8"><title>${nameField}</title>
+    <link rel="stylesheet" href="css/footer.css">${docStyles}    
     
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/theme-modern.css">
