--- a/crop-pdf.html
+++ b/crop-pdf.html
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crop PDF Pages | easyjpgtopdf</title>
+    <link rel="stylesheet" href="css/footer.css">
   <meta name="description" content="Trim unwanted margins from any PDF page with easyjpgtopdf's free Crop PDF tool. Upload, preview, adjust, and download a perfectly cropped document in seconds.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
