--- a/add-page-numbers.html
+++ b/add-page-numbers.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -861,5 +861,6 @@
             updatePreview();
         });
     </script>
+    <script type="module" src="js/auth.js"></script>
 </body>
 </html>
