--- a/crop-pdf.html
+++ b/crop-pdf.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1538,6 +1538,7 @@
       document.getElementById('currentYear').textContent = new Date().getFullYear();
     })();
   </script>
+    <script type="module" src="js/auth.js"></script>
 </body>
 </html>
 
