--- a/image-watermark-convert.html
+++ b/image-watermark-convert.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -287,6 +287,7 @@
             </p>
         </div>
     </footer>
+    <script type="module" src="js/auth.js"></script>
 </body></html>`;
       frame.src = 'data:text/html;base64,' + btoa(unescape(encodeURIComponent(html)));
 
@@ -318,6 +319,7 @@
             </p>
         </div>
     </footer>
+    <script type="module" src="js/auth.js"></script>
 </body>
 </html>
 
