--- a/payment-receipt.html
+++ b/payment-receipt.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="hi" dir="ltr">
 <head>
     <meta charset="UTF-8">
@@ -443,5 +443,6 @@
             }
         });
     </script>
+    <script type="module" src="js/auth.js"></script>
 </body>
 </html>
