--- a/ppt-to-pdf-new.html
+++ b/ppt-to-pdf-new.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -442,6 +442,7 @@
             </p>
         </div>
     </footer>
+    <script type="module" src="js/auth.js"></script>
 </body></html>`;
                 updateProgress(95, 'Finalizing document...');
                 let downloadUrl, downloadName;
@@ -501,6 +502,7 @@
             </p>
         </div>
     </footer>
+    <script type="module" src="js/auth.js"></script>
 </body>
 </html>
 
