--- a/protect-excel.html
+++ b/protect-excel.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1205,5 +1205,6 @@
             }
         });
     </script>
+    <script type="module" src="js/auth.js"></script>
 </body>
 </html>
