--- a/resume-maker.html
+++ b/resume-maker.html
@@ -2283,6 +2283,7 @@
             </p>
         </div>
     </footer>
+    <script type="module" src="js/auth.js"></script>
 </body>
                 </html>
             `);
@@ -2551,6 +2552,7 @@
             </p>
         </div>
     </footer>
+    <script type="module" src="js/auth.js"></script>
 </body>
                 </html>
             `;
@@ -2912,6 +2914,7 @@
             </p>
         </div>
     </footer>
+    <script type="module" src="js/auth.js"></script>
 </body>
 </html>
 
