--- a/image-resizer-result.html
+++ b/image-resizer-result.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -278,6 +278,7 @@
             </p>
         </div>
     </footer>
+    <script type="module" src="js/auth.js"></script>
 </body>
 </html>
 
