--- a/jpg-to-pdf.html
+++ b/jpg-to-pdf.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1">
@@ -255,6 +255,7 @@
             </p>
         </div>
     </footer>
+    <script type="module" src="js/auth.js"></script>
 </body></html>
 
 
