--- a/word-to-pdf.html
+++ b/word-to-pdf.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -418,6 +418,7 @@
             </p>
         </div>
     </footer>
+    <script type="module" src="js/auth.js"></script>
 </body>
 </html>
 
