--- a/server/public/protect-excel.html
+++ b/server/public/protect-excel.html
@@ -373,7 +373,7 @@
                 <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo" style="height:54px;"></a>
                 <div class="nav-links">
                     <div class="dropdown">
-                        <a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
+                        <a href="jpg-to-pdf.html">Convert to PDF <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="jpg-to-pdf.html">JPG to PDF</a>
                             <a href="word-to-pdf.html">Word to PDF</a>
@@ -382,7 +382,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Convert from PDF <i class="fas fa-chevron-down"></i></a>
+                        <a href="pdf-to-jpg.html">Convert from PDF <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="pdf-to-jpg.html">PDF to JPG</a>
                             <a href="pdf-to-word.html">PDF to Word</a>
@@ -391,7 +391,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Pdf Editor <i class="fas fa-chevron-down"></i></a>
+                        <a href="merge-pdf.html">Pdf Editor <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="merge-pdf.html">Merge PDF</a>
                             <a href="split-pdf.html">Split PDF</a>
@@ -405,7 +405,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Image Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="image-compressor.html">Image Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="image-compressor.html">Image Compressor</a>
                             <a href="image-resizer.html">Image Resizer</a>
@@ -416,7 +416,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Design Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="resume-maker.html">Design Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="resume-maker.html">Resume Maker</a>
                             <a href="biodata-maker.html">Marrige Biodata-Data Maker</a>
@@ -425,7 +425,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <a href="#">Other Tools <i class="fas fa-chevron-down"></i></a>
+                        <a href="protect-excel.html">Other Tools <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
                             <a href="excel-unlocker/" target="_blank">Excel Unlocker</a>
                             <a href="protect-excel.html">Protect Excel Sheet</a>
